Fixed bugs and improved gameplay
Fixed some bugs (mainly cactuses spawning too close to each other, not colliding with the player or disappearing too soon); improved gameplay by repositioning the game and the dinosaur, resizing the background's width and changing frame rate to 60 frames per second; improved code quality by creating constants for the cactus' speed, the player jump's speed and the player's left boundary; and updated README.md.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 .dino {
 	position: absolute;
 	bottom: 0;
+	left: 90px;
 	background-image: url(img/dino.png);
 	width: 60px;
 	height: 60px;
@@ -36,11 +37,12 @@ body {
 
 .background {
 	position: absolute;
-	bottom: 0px;
+	bottom: 25px;
+	right: 10px;
 	background-image: url('img/background.png');
 	background-repeat: repeat-x;
 	animation: slideright 2000s infinite linear;
 	-webkit-animation: slideright 2000s infinite linear;
-	width: 100%;
+	width: 99.33%;
 	height: 200px;
 }
